# openverse-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: scene.h  world_renderer.h
client/src/: main.cpp  scene.cpp  world_renderer.cpp
common/: CMakeLists.txt
common/include/: block.h  block_state.h  chunk.h  chunk_pillar.h  event.h  item.h  location.h  network.h  protocol.h  util.h  world.h
common/src/: block.cpp  block_state.cpp  chunk.cpp  chunk_pillar.cpp  item.cpp  network.cpp  protocol.cpp  util.cpp  world.cpp
common/test/: block.h  event.h  main.cpp  network.h  util.h
server/: CMakeLists.txt
server/include/: player.h  server.h
server/src/: player.cpp  server.cpp
src/common/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h
src/launcher/: Main.cpp
