find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
find_package(glfw3 REQUIRED)

file(GLOB CPP_FILES src/*.cpp)
file(GLOB H_FILES src/*.h include/*.h)
set(SOURCE_FILES ${CPP_FILES} ${H_FILES})
add_executable(client ${SOURCE_FILES})
target_link_libraries(client common server ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES} glfw)

file(GLOB TEST_CPP_FILES test/*.cpp)
file(GLOB TEST_H_FILES test/*.h)
set(TEST_FILES ${TEST_CPP_FILES} ${TEST_H_FILES})
add_executable(client_test ${TEST_FILES})
target_include_directories(client_test PUBLIC client)
